# AI-First-HCP-CRM

./: .env.example  .gitignore  AGENTS.md  MEMORY.md  README.md  TASKS.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  startup.sh
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: groq_client.py
backend/app/api/v1/: agent.py  chat.py  dashboard.py  followups.py  hcps.py  health.py  interactions.py
backend/app/core/: config.py  dependencies.py  exceptions.py  security.py
backend/app/database/: engine.py  session.py
backend/app/graph/: graph.py  state.py
backend/app/graph/nodes/: entity_extraction.py  intent_detection.py  response_generator.py  tool_execution.py  tool_router.py
backend/app/models/: __init__.py  ai_extraction_log.py  base.py  chat_message.py  discussion_topic.py  follow_up.py  hcp.py  interaction.py  material_shared.py  product_discussed.py  sample_distributed.py  user.py
backend/app/prompts/: extraction_prompt.txt  system_prompt.txt
backend/app/repositories/: base.py  hcp.py  interaction.py
backend/app/schemas/: common.py  hcp.py  interaction.py
backend/app/services/: hcp_service.py  interaction_service.py
backend/app/tools/: create_hcp.py  edit_interaction.py  generate_summary.py  log_interaction.py  retrieve_history.py  suggest_next_action.py
backend/seeds/: seed.py
backend/tests/: conftest.py  test_create_hcp.py  test_edit_and_summary.py  test_hcps.py  test_health.py  test_interactions.py  test_repository.py
docs/: API-SPEC.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  (+5 more)
(+50 files in other folders)
